! Population of buoys list on dashboard.
! Filtering of map markers on dashboard.
* Format last login time as from now.
+ Add placeholders to Add User input fields.
+ Dashboard reacts to buoy group and instance name changes made in config page without requiring page refresh.
* Allow time range filters to accept dates without needing to specify times.
* Dashboard styling.
* Filter sections no longer have individual scrollbars.
+ Optimise dashboard for small screens.



v0.2 - Week 8 22/9
Server:
* Readings table has been split into two tables, "reading" and "sensor_reading". A reading has many sensor readings. When a "reading" is taken the buoy checks its sensors at the same time, so we can assume that the latitude, longitude and timestamp are all going to be the same for each "sensor_reading".

* All SQL queries related to readings have been updated to reflect the changes to the readings in the database.

! GET /api/warnings now properly returns all warnings for warning triggers that have been satisfied. The old implementation used to only check if a warning trigger was satisfied for ONE sensor from the most recent reading for each active buoy instance. This has been corrected so now warning triggers are checked against EVERY sensor in the most recent reading for each active buoy instance.

* GET /api/buoy_instances?active_true now also returns the last known location for a buoy instance. This will be used by the iOS app to display the buoys on the map.

iOS app:
+ Added 'Remember me' option to login screen for email/password.
+ Added settings screen plus a button to access it.
+ Added server address option to settings screen, specifying which server to connect to.
! Fixed issue where connecting to nonexistent server froze app.

Web app:
* Change font to Lato
* Change navbar colour to an aqua-blue
* Increase size of the map on the Dashboard
! Fix alignment issues on Filters on the Dashboard

v0.1 (MVP) - Week 7 15/9
+ Initial release